--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Mon May 27 21:58:22 PDT 2013
+#Thu Jun 20 12:55:09 PDT 2013
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=
 domain=default
+config.resources=customer-mgmt-example.xml
